@@ -30,7 +30,8 @@
           }
         ],
         "previous": "../melbot_20220707/",
-        "next": "../melbot_20220709/"
+        "next": "../melbot_20220709/",
+        "nostrkey": "7ece5cd4ef612b7d642931ca9c2b71ab8cf01a94a6c3c901177cb2a41fb4d84a"
       }
     </script>
 
@@ -89,7 +90,8 @@
             Previous: <a style="color: blue" href="${di.data.previous}">${di
             .data.previous}</a> ${'\n'}
             Next: <a style="color: blue" href="${di.data.next}">${di.data
-            .next}</a>
+            .next}</a> ${'\n'}
+            Nostr: ${di.data.nostrkey}
 
 
           </pre>
